# rust_dnf5daemon

./: .gitignore  Cargo.toml  LICENCE-MIT  Readme.md  dnf.rs  rustfmt.toml  session_manager.rs
examples/: e01_list.rs  install.rs  list.rs  reinstall.rs  remove.rs
src/: errors.rs  lib.rs  main.rs
src/dnf/: daemon.rs  mod.rs  pacakge.rs  package.rs  proxy.rs  transaction.rs
tests/: integration_test.rs
