[package]
name = "dnf5daemon"
version = "0.1.0"
edition = "2024"

[[test]]
name = "integration_test"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.28"
serde = "1.0.228"
termion = "4.0.5"
tokio = { version = "1.48.0", features = ["macros"] }
zbus = { version = "5.12.0", features = ["tokio"] }
