[package]
name = "dnf5daemon"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 } # For exploratory dev.

[[test]]
name = "integration_test"

[dependencies]
derive_more = { version = "2.0.1", features = ["from", "display"] }
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.28"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["macros"] }
zbus = { version = "5.12.0", features = ["tokio"] }
